# hsrb_description

./: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
launch/: display.rviz  hsrb_display.launch  hsrb_display.launch.py  hsrc_display.launch.py
robots/: hsrb4s.urdf  hsrb4s.urdf.xacro  hsrc1s.urdf.xacro  upload_hsrb.launch
urdf/: common.xacro  ros2_control.hsrb4s.gazebo.xacro  ros2_control.hsrb4s.robot.xacro  ros2_control.hsrc1s.gazebo.xacro  ros2_control.hsrc1s.robot.xacro  ros2_control.rviz.xacro
urdf/arm_v0/: arm.gazebo.xacro  arm.transmission.xacro
urdf/arm_v1/: arm.urdf.xacro
urdf/base_v2/: base.gazebo.xacro  base.transmission.xacro
urdf/base_v3/: base.urdf.xacro
urdf/hand_v0/: hand.gazebo.xacro  hand.transmission.xacro  hand.urdf.xacro
urdf/hand_v1/: hand.urdf.xacro
urdf/head_v2/: head.gazebo.xacro  head.transmission.xacro
urdf/head_v3/: head.gazebo.xacro  head.urdf.xacro
urdf/sensors/: asus_xtion.gazebo.xacro  asus_xtion.urdf.xacro  hokuyo_laser.gazebo.xacro  hokuyo_laser.urdf.xacro  imu.urdf.xacro  minebea_ft_sensor.gazebo.xacro  minebea_ft_sensor.urdf.xacro  pointgrey_chameleon.gazebo.xacro  pointgrey_chameleon.urdf.xacro  wide_camera.gazebo.xacro
urdf/torso_v0/: torso.gazebo.xacro
urdf/torso_v1/: torso.urdf.xacro
urdf/wrist_v0/: wrist.gazebo.xacro  wrist.transmission.xacro
urdf/wrist_v1/: wrist.urdf.xacro
